workload/services/media-server/resources/bazarr/service-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: 6767
